--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: Build with Maven
         run: |
-          'jf mvn clean install'
+          'jf mvn clean install -DskipTests'
