--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -28,7 +28,7 @@ jobs:
         # [Mandatory if using OIDC authentication protocol instead of JF_ACCESS_TOKEN]
         # Insert to oidc-provider-name the 'Provider Name' defined in the OIDC integration configured in the JPD
         with:
-          oidc-provider-name: 'github'
+          oidc-provider-name: 'github-oidc-integration'
           oidc-audience: 'jfrog-github'
         env:
           JF_URL: ${{ vars.JF_URL }}
