--- a/.github/workflows/source-code-audit.yml
+++ b/.github/workflows/source-code-audit.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/setup-java@v5.0.0
         with:
           distribution: 'corretto'
+          java-version: '21'
 
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v4
