--- a/.github/workflows/source-code-audit.yml
+++ b/.github/workflows/source-code-audit.yml
@@ -31,12 +31,12 @@ jobs:
 
       - name: Source Code Audit
         run: |
-          'jf audit --mvn --licenses'
+          jf audit --mvn --licenses
 
       - name: Source Code Audit in JSON Format
         run: |
-          'jf audit --mvn --licenses --output=json --fail=false --project=$JF_PROJECT'
+          jf audit --mvn --licenses --output=json --fail=false --project=$JF_PROJECT
 
       - name: Source Code Audit With Scoped Watch
         run: |
-          'jf audit --mvn --licenses --watch=license-demo-watch --project=$JF_PROJECT --fail=false'
+          jf audit --mvn --licenses --watch=license-demo-watch --project=$JF_PROJECT --fail=false
