--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -34,4 +34,7 @@ jobs:
           JF_URL: ${{ vars.JF_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
           JF_GIT_TOKEN: ${{ secrets.JF_GIT_TOKEN }}
-          JF_GIT_BASE_BRANCH: ${{ matrix.branch }}    # For repository scan action
+          JF_GIT_BASE_BRANCH: ${{ matrix.branch }}
+          JF_USE_CONFIG_PROFILE: true
+          JF_WATCHES: license-demo-watch
+# For repository scan action
