Bringing in Weka-Stable library

--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,13 @@
       <artifactId>testcontainers-mysql</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>nz.ac.waikato.cms.weka</groupId>
+        <artifactId>weka-stable</artifactId>
+        <version>3.8.0</version>
+        <scope>runtime</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
