Adding SolEng as build deploy target 3

--- a/.github/workflows/build-and-deploy-soleng.yml
+++ b/.github/workflows/build-and-deploy-soleng.yml
@@ -43,4 +43,4 @@ jobs:
 
       - name: Build with Maven
         run: |
-          'jf mvn clean install -DskipTests'
+          jf mvn clean install -DskipTests
