--- a/.github/workflows/build-and-deploy-soleng.yml
+++ b/.github/workflows/build-and-deploy-soleng.yml
@@ -43,4 +43,6 @@ jobs:
 
       - name: Build with Maven
         run: |
+          which mvn
+          echo $PATH
           jf mvn clean install -DskipTests
