--- a/.github/workflows/build-and-deploy-soleng.yml
+++ b/.github/workflows/build-and-deploy-soleng.yml
@@ -41,6 +41,10 @@ jobs:
           --repo-deploy-snapshots=tomj-petclinicmonolith-maven-dev-local \
           --use-wrapper=true    
 
+      - name: Add Maven to PATH
+        run: |
+          export PATH="$(dirname $(which mvn)):$PATH"
+
       - name: Build with Maven
         run: |
           which mvn
